Fixed spacings and added image in telecom page.

--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -364,8 +364,8 @@
     }
 
     .footer-btn-primary .footer-btn-arrow {
-        width: 45px;
-        height: 45px;
+        width: 56px;
+        height: 56px;
     }
 }
 
